--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,8 +4,10 @@
 @import './1.utils/functions';
 @import './1.utils/placeholders';
 @import './4.components/button';
+@import './4.components/card';
 @import './5.layout/nav-bar';
 @import './5.layout/anchor';
+@import './5.layout/restaurants';
 @import './5.layout/instructions';
 
 
