footer complete minus svg styles

--- a/scss/1.utils/_mixins.scss
+++ b/scss/1.utils/_mixins.scss
@@ -4,6 +4,18 @@
     border-width: 1px;
 }
 
+@mixin flex($direction) {
+    display: flex;
+    flex-direction: $direction;
+}
+
+@mixin flex-row-start-cntr {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 @mixin flex-cntr($direction) {
     display: flex;
     flex-direction: $direction;
