--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import './5.layout/anchor';
 @import './5.layout/restaurants';
 @import './5.layout/instructions';
+@import './5.layout/footer';
 
 
 
