completed top part

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import './5.layout/restaurants';
 @import './5.layout/instructions';
 @import './5.layout/restaurant-photo';
+@import './5.layout/menu';
 @import './5.layout/footer';
 
 
