--- a/scss/5.layout/_menu.scss
+++ b/scss/5.layout/_menu.scss
@@ -1,24 +1,23 @@
 .menu {
-    @include construction-line($block);
     @include flex-cntr(column);
+    border-width: 1px;
+    border-style: solid;
+    border-color: lightgray;
     border-radius: 40px 40px 0 0;
     width: 100%;
-    background-color: white;
+    background-color: rgb(246,246,246);
 
     &__name {
-        @include construction-line($element);
         @include flex-row-split-cntrd;
         padding-top: 40px;
         width: 89.6%;
     }
 
     &__restaurant-name {
-        @include construction-line($element);
         margin: 0;
     }
 
     &__favourite-icon {
-        @include construction-line($element);
         margin: 0;
 
         .heart-icon {
