--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import './1.utils/placeholders';
 @import './4.components/button';
 @import './4.components/card';
+@import './4.components/menu-form';
 @import './5.layout/nav-bar';
 @import './5.layout/anchor';
 @import './5.layout/restaurants';
