--- a/scss/5.layout/_menu.scss
+++ b/scss/5.layout/_menu.scss
@@ -1,6 +1,6 @@
 .menu {
     @include flex-cntr(column);
-    border-width: 1px;
+    border-width: 1px 1px 0 1px;
     border-style: solid;
     border-color: lightgray;
     border-radius: 40px 40px 0 0;
