--- a/scss/5.layout/_restaurants.scss
+++ b/scss/5.layout/_restaurants.scss
@@ -4,6 +4,7 @@
     padding-top: 59px;
     padding-bottom: 63px;
     background-color: rgb(246,246,246);
+    position: relative;
 
     &__heading {
         width: 89.6%;
