--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,11 +13,16 @@
 @import './5.layout/restaurant-photo';
 @import './5.layout/menu';
 @import './5.layout/footer';
+@import './5.layout/restaurant-layout';
 
 
 
 header {
     width: 100%;
+}
+
+body {
+    background-color: rgb(246,246,246);
 }
 
 main {
