--- a/scss/5.layout/_footer.scss
+++ b/scss/5.layout/_footer.scss
@@ -2,6 +2,7 @@
     background-color: rgb(53, 53, 53);
     padding-top: 26px;
     padding-bottom: 37px;
+    position: relative;
     @include flex-cntr(column);
 
     &__logo-container {
