--- a/scss/5.layout/_restaurant-photo.scss
+++ b/scss/5.layout/_restaurant-photo.scss
@@ -6,7 +6,8 @@
     position: relative;
 
     img {
-        width: 100%;
-        object-fit: contain;
+        min-width: 50%;
+        max-width: 100%;
+        object-fit: fill;
     }
 }
