--- a/scss/1.utils/_mixins.scss
+++ b/scss/1.utils/_mixins.scss
@@ -38,3 +38,22 @@
 @mixin btn-background {
     background: linear-gradient(to bottom, $button-color-primary, $button-color-secondary);
 }
+
+
+@keyframes rotate360 {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+}
+
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
