--- a/scss/4.components/_menu-form.scss
+++ b/scss/4.components/_menu-form.scss
@@ -12,12 +12,25 @@
         margin: 0;
         padding: 0;
         border-style: none;
+        opacity: 0;
+
+        &:nth-child(1) {
+            animation: 2s fade-in forwards;
+        }
+
+        &:nth-child(2) {
+            animation: 2s fade-in forwards;
+        }
+
+        &:nth-child(3) {
+            animation: 2s fade-in forwards;
+        }
     }
 
     &__meal-label {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
         border-radius: 10px;
         border-style: solid;
@@ -25,16 +38,39 @@
         border-color: lightgray;
         background-color: rgb(255,255,255);
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.33);
-
+        overflow: hidden;
         width: 100%;
+        height: 70px;
         margin: 0 0 15px 0;
         padding: 0;
+        opacity: 0;
+
+        &:nth-child(1) {
+            animation: 1s fade-in forwards;
+            animation-delay: 0s;
+        }
+
+        &:nth-child(2) {
+            animation: 1s fade-in forwards;
+            animation-delay: 0.3s;
+        }
+
+        &:nth-child(3) {
+            animation: 1s fade-in forwards;
+            animation-delay: 0.6s;
+        }
+
+        &:nth-child(4) {
+            animation: 1s fade-in forwards;
+            animation-delay: 0.9s;
+        }
     }
 
     &__meal {
         margin: 12px 0 12px 0;
-        width: 93%;
+        width: 95%;
         margin-left: 3.5%;
+        transition: 0.5s width;
     }
 
     &__meal-name {
@@ -59,11 +95,17 @@
     }
 
     &__meal-select {
-        display: none;
+        @include flex-cntr(row);
+        height: 100%;
+        width: 0%;
+        background-color: rgb(131,232,210);
+        transition: 0.5s width;
     }
 
     &__checkbox {
-        display: none;
+        color: white;
+        font-size: 21px;
+        transform-origin: center;
     }
 
     &__checkbox-hidden {
@@ -80,13 +122,26 @@
             width: 188px;
             border-color: lightgray;
             border-width: 1px;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 
     &__meal-label:hover {
+
         .menu-form__meal {
-            width: 70%;
-            transition: 0.3s width;
+            width: 80%;
+        }
+
+        .menu-form__meal-select {
+            opacity: 1;
+            width: 15%;
+        }
+
+        .menu-form__checkbox {
+            animation: rotate360 0.5s linear;
         }
     }
 }
