added new banner

--- a/scss/4.components/_card.scss
+++ b/scss/4.components/_card.scss
@@ -16,6 +16,8 @@
         height: 175px;
         overflow: hidden;
         @include flex-cntr(column);
+        position: relative;
+        z-index: 1;
 
         img {
             object-fit: contain;
