desktop version of landing complete

--- a/scss/1.utils/_mixins.scss
+++ b/scss/1.utils/_mixins.scss
@@ -39,6 +39,11 @@
     background: linear-gradient(to bottom, $button-color-primary, $button-color-secondary);
 }
 
+@mixin breakpoint($width) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
 
 @keyframes rotate360 {
     from {
