--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,6 +25,10 @@ header {
 
 body {
     background-color: rgb(246,246,246);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 main {
