--- a/scss/1.utils/_variables.scss
+++ b/scss/1.utils/_variables.scss
@@ -13,9 +13,8 @@ $element: red;
 $font-weight: 100 200 300 400 500 600 700 800 900;
 $font-size: 0.5rem 0.75rem 1rem 1.25rem 1.5rem 1.75rem 2rem 2.25rem;
 
-$mobile-breakpoints: 320px 480px 576px 768px;
-$tablet-breakpoints: 768px 1024px 1280px;
-$desktop-breakpoints: 1280px 1366px 1440px;
+$tablet-breakpoint: 768px;
+$desktop-breakpoint: 1000px;
 
 $transition-durations: 0.3s 0.6s 1s 2s 3s 5s;
 
