--- a/scss/5.layout/_footer.scss
+++ b/scss/5.layout/_footer.scss
@@ -2,6 +2,7 @@
     background-color: rgb(53, 53, 53);
     padding-top: 26px;
     padding-bottom: 37px;
+    width: 100%;
     position: relative;
     @include flex-cntr(column);
 
@@ -46,7 +47,54 @@
         margin: 0;
     }
 
-    .svg-main {
-        fill: #fff;
+    @include breakpoint($desktop-breakpoint) {
+        &__logo-container {
+            width: 80%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &__footer-links {
+            width: 80%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 10%;
+        }
+
+        &__link {
+            
+            a {
+                width: fit-content;
+            }
+        }
+    }
+
+    @include breakpoint($tablet-breakpoint) {
+        &__logo-container {
+            width: 80%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        &__footer-links {
+            width: 80%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 10%;
+        }
+
+        &__link {
+            
+            a {
+                width: fit-content;
+            }
+        }
     }
 }
+
