--- a/scss/5.layout/_instructions.scss
+++ b/scss/5.layout/_instructions.scss
@@ -53,6 +53,16 @@
             font-size: nth($font-size, 4 );
         }
     }
+
+    @include breakpoint($desktop-breakpoint) {
+        @include flex-cntr(row);
+        padding-left: 10%;
+        padding-right: 10%;
+
+        &__heading {
+            width: 50%;
+        }
+    }
 }
 
 .fa-store {
