--- a/scss/5.layout/_restaurants.scss
+++ b/scss/5.layout/_restaurants.scss
@@ -18,4 +18,42 @@
             @include rmv-link-styles;
         }
     }
+
+    @include breakpoint($desktop-breakpoint) {
+        flex-direction: row-reverse;
+        width: 100%;
+
+        &__heading {
+            width: 20%;
+            text-align: center;
+        }
+
+        &__cards {
+            width: 60%;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2%;
+
+            a {
+
+                &:nth-child(1) {
+                    width: 55%;
+                }
+
+                &:nth-child(2) {
+                    width: 42%;
+                }
+
+                &:nth-child(3) {
+                    width: 44%;
+                }
+
+                &:nth-child(4) {
+                    width: 53%;
+                }
+            }
+        }
+    }
 }
