--- a/scss/5.layout/_restaurants.scss
+++ b/scss/5.layout/_restaurants.scss
@@ -56,4 +56,34 @@
             }
         }
     }
+
+    @include breakpoint($tablet-breakpoint) {
+
+        &__cards {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2%;
+
+            a {
+
+                &:nth-child(1) {
+                    width: 49%;
+                }
+
+                &:nth-child(2) {
+                    width: 49%;
+                }
+
+                &:nth-child(3) {
+                    width: 49%;
+                }
+
+                &:nth-child(4) {
+                    width: 49%;
+                }
+            }
+        }
+    }
 }
