--- a/scss/4.components/_menu-form.scss
+++ b/scss/4.components/_menu-form.scss
@@ -1,6 +1,11 @@
 .menu-form {
     width: 89.6%;
 
+   &__fieldset-container {
+    width: 100%;
+    height: auto;
+    margin: 0;
+   }
 
     &__fieldset-title {
         font-weight: nth($font-weight, 1);
@@ -142,6 +147,16 @@
 
         .menu-form__checkbox {
             animation: rotate360 0.5s linear;
+        }
+    }
+
+    @include breakpoint($tablet-breakpoint) {
+        &__fieldset-container {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 3%;
         }
     }
 }
