--- a/scss/4.components/_menu-form.scss
+++ b/scss/4.components/_menu-form.scss
@@ -82,6 +82,36 @@
             animation: 1s fade-in forwards;
             animation-delay: 0.9s;
         }
+
+        &:nth-child(5) {
+            animation: 1s fade-in forwards;
+            animation-delay: 1.2s;
+        }
+
+        &:nth-child(6) {
+            animation: 1s fade-in forwards;
+            animation-delay: 1.5s;
+        }
+
+        &:nth-child(7) {
+            animation: 1s fade-in forwards;
+            animation-delay: 1.8s;
+        }
+
+        &:nth-child(8) {
+            animation: 1s fade-in forwards;
+            animation-delay: 2.1s;
+        }
+
+        &:nth-child(9) {
+            animation: 1s fade-in forwards;
+            animation-delay: 2.4s;
+        }
+
+        &:nth-child(10) {
+            animation: 1s fade-in forwards;
+            animation-delay: 2.7s;
+        }
     }
 
     &__meal {
@@ -168,7 +198,7 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
-            align-items: center;
+            align-items: flex-start;
             gap: 3%;
         }
     }
