current: bug with menu option legths

--- a/scss/1.utils/_variables.scss
+++ b/scss/1.utils/_variables.scss
@@ -2,6 +2,7 @@ $primary-color: red;
 $secondary-color: green;
 $primary-font-color: black;
 $secondary-font-color: white;
+$heading-font: "Shirkhand", 'Roboto', sans-serif;
 $nav-location-color: rgb(234,234,234);
 $button-color-primary: rgb(255, 76, 217);
 $button-color-secondary: rgb(165, 47, 212);
