--- a/scss/4.components/_menu-form.scss
+++ b/scss/4.components/_menu-form.scss
@@ -27,6 +27,7 @@
 
     &__fieldset {
         width: 100%;
+        max-width: 100%;
         margin: 0;
         padding: 0;
         border-style: none;
@@ -58,6 +59,7 @@
         box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.33);
         overflow: hidden;
         width: 100%;
+        max-width: 100%;
         height: 70px;
         margin: 0 0 15px 0;
         padding: 0;
@@ -124,21 +126,42 @@
     &__meal-name {
         margin: 0;
         height: fit-content;
+        width: 95%;
+        max-width: 95%;
         font-size: nth($font-size , 4);
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     &__meal-description {
-        @include flex-row-split-cntrd;
         margin: 7px 0 0 0;
         height: 19px;
-        width: 100%;
+        width: 95%;
+        max-width: 95%;
+        @include construction-line($block);
+        display: flex;
+        justify-content: space-between;
 
         p {
             margin: 0;
+            text-wrap: nowrap;
+        }
+
+        p:nth-child(1) {
+            height: 19px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            width: 75%;
         }
 
         p:nth-child(2) {
             font-weight: nth($font-weight, 9);
+            @include construction-line($block);
+            width: 10%;
         }
     }
 
@@ -146,14 +169,19 @@
         @include flex-cntr(row);
         height: 100%;
         width: 0%;
+        opacity: 0;
+        visibility: hidden;
         background-color: rgb(131,232,210);
-        transition: 0.5s width;
+        transition: 0.5s width, 0.5s opacity, 0.2s visibility;
     }
 
     &__checkbox {
         color: white;
         font-size: 21px;
         transform-origin: center;
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.5s opacity, 0.2s visibility;
     }
 
     &__checkbox-hidden {
@@ -186,10 +214,13 @@
         .menu-form__meal-select {
             opacity: 1;
             width: 15%;
+            visibility: visible;
         }
 
         .menu-form__checkbox {
             animation: rotate360 0.5s linear;
+            opacity: 1;
+            visibility: visible;
         }
     }
 
