--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@
 @import './1.utils/placeholders';
 @import './4.components/button';
 @import './4.components/card';
+@import './4.components/meal-label';
 @import './4.components/menu-form';
 @import './4.components/new-banner';
 @import './5.layout/nav-bar';
