--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import './1.utils/mixins';
 @import './1.utils/functions';
 @import './1.utils/placeholders';
+@import './4.components/loader';
 @import './4.components/button';
 @import './4.components/card';
 @import './4.components/meal-label';
