--- a/scss/5.layout/_restaurants.scss
+++ b/scss/5.layout/_restaurants.scss
@@ -50,7 +50,7 @@
     }
 
     @include breakpoint($desktop-breakpoint) {
-        flex-direction: column;
+        flex-direction: row-reverse;
         width: 100%;
 
         &__heading {
@@ -59,7 +59,7 @@
         }
 
         &__cards {
-            width: 83%;
+            width: 60%;
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
