--- a/scss/4.components/_loader.scss
+++ b/scss/4.components/_loader.scss
@@ -26,7 +26,7 @@
     width: 10px;
     height: 10px;
     border: 5px solid #dddddd;
-    border-top-color: #009578;
+    border-top-color: $button-color-secondary;
     border-radius: 50%;
     animation: loading 0.75s ease infinite;
   }
