--- a/scss/5.layout/_restaurants.scss
+++ b/scss/5.layout/_restaurants.scss
@@ -50,12 +50,12 @@
     }
 
     @include breakpoint($desktop-breakpoint) {
-        flex-direction: row-reverse;
+        flex-direction: row;
         width: 100%;
 
         &__heading {
             width: 20%;
-            text-align: center;
+            text-align: start;
         }
 
         &__cards {
