--- a/scss/5.layout/_instructions.scss
+++ b/scss/5.layout/_instructions.scss
@@ -3,6 +3,7 @@
     padding-top: 3.25rem;
     padding-bottom: 4rem;
     background-color: rgb(255,255,255);
+    animation: 7s fade-in forwards;
 
     &__heading {
         width: 89.6%;
