--- a/scss/5.layout/_restaurants.scss
+++ b/scss/5.layout/_restaurants.scss
@@ -5,6 +5,7 @@
     padding-bottom: 63px;
     background-color: rgb(246,246,246);
     position: relative;
+    animation: 8s fade-in forwards;
 
     &__heading {
         width: 89.6%;
